# foam-extend-foam-extend-4.0

./: .gitattributes  .gitignore  .hgignore  .timeStamp  Allclean  Allwmake  Allwmake.firstInstall  Allwmake.mingw  CMakeLists.txt  COPYING  CTestConfig.cmake  Changelog.current  ContributionsForNextRelease.txt  DraftReleaseNotes-nextRelease  ExtendProjectPreamble  HowToContribute  ListOfContributors  README  README.html  README_RealGasBranch  ReleaseNotes  ReleaseNotes-1.5  ReleaseNotes-1.5.html  ReleaseNotes-1.6-ext  ReleaseNotes-featureDescription  ReleaseNotes-foam-extend-3.0  ReleaseNotes-foam-extend-3.1  ReleaseNotes.html  ReleaseNotes.txt  buildInstructions.txt
applications/solvers/compressible/: CMakeLists.txt
applications/solvers/multiphase/: CMakeLists.txt
applications/solvers/solidMechanics/: Allwclean  Allwmake  CMakeLists.txt  readMe.txt
applications/utilities/preProcessing/: CMakeLists.txt
src/: Allwmake  CMakeLists.txt
src/ODE/: CMakeLists.txt
src/ODE/Make/: files  options
src/ODE/ODE/: ODE.H
src/ODE/translationODE/: translationODE.C  translationODE.H  translationODEI.H
src/OSspecific/: CMakeLists.txt
src/OSspecific/MSWindows/: CMakeLists.txt  MSwindows.C  MSwindows.H  deelx.h  fileMonitor.C  fileMonitor.H  fileStat.C  fileStat.H  printStack.C  regExp.C  regExp.H  timer.C  timer.H
src/OSspecific/POSIX/: CMakeLists.txt  POSIX.C  POSIX.H  dummyPrintStack.C  fileMonitor.C  fileMonitor.H  fileStat.C  fileStat.H  printStack.C  regExp.C  regExp.H  timer.C  timer.H
src/OSspecific/Unix/: Unix.C  Unix.H  fileStat.H  printStack.C  timer.H
src/OpenFOAM/Make/: files  options
src/OpenFOAM/coordinateSystems/: Changes.txt  cartesianCS.C  cartesianCS.H  coordinateSystem.C  coordinateSystem.H  coordinateSystems.C  coordinateSystems.H  cylindricalCS.C  cylindricalCS.H  ellipticCylindricalCS.C  ellipticCylindricalCS.H  newCoordinateSystem.C  parabolicCylindricalCS.C  parabolicCylindricalCS.H  sphericalCS.C  sphericalCS.H  toroidalCS.C  toroidalCS.H
src/OpenFOAM/dimensionSet/: dimensionSet.C  dimensionSet.H  dimensionSetIO.C  dimensionSets.C  dimensionSets.H
src/OpenFOAM/dimensionedTypes/: dimensionedTypes.H
src/OpenFOAM/global/: foamVersion.H  global.Cver  new.C
src/OpenFOAM/graph/: graph.C  graph.H
src/OpenFOAM/include/: CintDefs.H  CintUndefs.H  OSspecific.H  addConstantOption.H  addLatestTimeOption.H  addNoZeroOption.H  addRegionOption.H  addTimeOption.H  addTimeOptions.H  addTimeOptionsNoConstant.H  checkConstantOption.H  checkLatestTimeOption.H  checkTimeOption.H  checkTimeOptions.H  checkTimeOptionsNoConstant.H  createMesh.H  createMeshNoClear.H  createNamedMesh.H  createNamedPolyMesh.H  createPolyMesh.H  createTime.H  demandDrivenData.H  initTotalVolume.H
src/POD/: CMakeLists.txt
src/POD/Make/: files  options
src/POD/POD/: POD.C  POD.H
src/POD/PODEigenBase/: PODEigenBase.C  PODEigenBase.H
src/POD/PODODE/: PODODE.C  PODODE.H
src/POD/PODOrthoNormalBase/: PODOrthoNormalBase.C  PODOrthoNormalBase.H  PODOrthoNormalBases.H  PODOrthoNormalBasesFwd.H  scalarPODOrthoNormalBase.C  scalarPODOrthoNormalBase.H
src/POD/scalarTransportPOD/: scalarTransportPOD.C  scalarTransportPOD.H
src/Pstream/: Allwmake
src/Pstream/dummy/: IPread.C  OPwrite.C  Pstream.C
src/Pstream/gamma/: IPread.C  OPwrite.C  Pstream.C  PstreamGlobals.C  PstreamGlobals.H
src/Pstream/mpi/: IPread.C  OPwrite.C  Pstream.C  PstreamGlobals.C  PstreamGlobals.H
src/Pstream/pvm/: IPread.C  OPwrite.C  Pstream.C
src/VectorN/Make/: files  options
src/autoMesh/Make/: options
src/blockMatrix/BlockCoeff/: symmTensorBlockCoeff.H  tensorBlockCoeff.C
src/blockMatrix/BlockLduMatrix/: BlockLduMatrix.C  BlockLduMatrix.H  BlockLduMatrixATmul.C  BlockLduMatrixHOps.C  BlockLduMatrixOperations.C  BlockLduMatrixUpdateInterfaces.C  scalarBlockLduMatrix.C
src/blockMatrix/CoeffField/: CoeffField.C  CoeffField.H  CoeffFieldFunctions.H  scalarCoeffField.C
src/blockMatrix/Make/: files
src/blockMatrix/expandContract/: expandTensor.H  expandTensorField.H
src/blockMatrix/vectorN/: ExpandTensorN.H  ExpandTensorNField.C  ExpandTensorNField.H  TensorN.H  TensorNField.H  TensorNI.H  VectorN.H  VectorNI.H
src/conjugateHeatTransfer/: CMakeLists.txt
src/conjugateHeatTransfer/Make/: files
src/conjugateHeatTransfer/thermalModel/: thermalModel.C  thermalModel.H
src/conversion/: Allwmake  CMakeLists.txt
src/conversion/Make/: files
src/conversion/meshReader/: calcPointCells.C  createPolyBoundary.C  createPolyCells.C  meshReader.C  meshReader.H  meshReaderAux.C
src/conversion/meshTables/: boundaryRegion.C  boundaryRegion.H  cellTable.C  cellTable.H  remappingDict
src/conversion/meshWriter/: meshWriter.C  meshWriter.H
src/coupledMatrix/: CMakeLists.txt
src/cudaSolvers/: Allwmake  CMakeLists.txt
src/dbns/: CMakeLists.txt
src/dbns/Make/: files  (+1 more)
src/decompositionAgglomeration/: Allwmake
src/decompositionMethods/: Allwmake  AllwmakeLnInclude  CMakeLists.txt
src/dynamicMesh/: Allwmake  AllwmakeLnInclude  CMakeLists.txt
src/edgeMesh/: CMakeLists.txt  edgeMesh.C  edgeMesh.H  edgeMeshI.H  edgeMeshIO.C  featureEdgeMesh.C  featureEdgeMesh.H
src/engine/: CMakeLists.txt
src/equationReader/: CMakeLists.txt
src/errorEstimation/: CMakeLists.txt
src/finiteArea/: CMakeLists.txt
src/finiteVolume/: CMakeLists.txt  log.wmakeLibso
src/foam/: CMakeLists.txt
src/fvAgglomerationMethods/: Allwmake  CMakeLists.txt
src/immersedBoundary/: CMakeLists.txt
src/lagrangian/: Allwmake  CMakeLists.txt
src/lduSolvers/: CMakeLists.txt
src/mesh/: Allwmake  CMakeLists.txt
src/meshTools/: CMakeLists.txt  readSTLASCII.C
src/multiSolver/: CMakeLists.txt
src/overset/: CMakeLists.txt
src/postProcessing/: Allwmake  CMakeLists.txt
src/randomProcesses/: CMakeLists.txt
src/sampling/: CMakeLists.txt
src/solidModels/: CMakeLists.txt
src/surfMesh/: CMakeLists.txt  STLsurfaceFormatASCII.C
src/tetFiniteElement/: CMakeLists.txt
src/thermophysicalModels/: Allwmake  CMakeLists.txt
src/transportModels/: Allwmake  CMakeLists.txt
src/turbulenceModels/: Allwmake  CMakeLists.txt
(+22250 files in other folders)
